# IR2-project

./: .gitignore  .gitmodules  InPairs.md  README.md  environment.yml  job_template.job  load_llamacpp.py  parse_experiment_config.py  process_results.py  pyproject.toml  pytest.ini  quantize_model.job  requirements.txt  use_llamacpp.job  vllm_inference.py
config/: cpo_args.json  cpo_args_multi.json  dspy_config.json  hf_uploads_config.json  inpars-todo.csv  inpars-todo_v2.csv  peft_config.json
cpo_eval_cpo_llama8b_msmarco100k_ckpt130500/: metrics.json
inpars/: adapter_postprocessing.py  compare.py  config.py  cpo_dataset.py  cpo_eval.py  cpo_finetune.py  dataset.py  dataset_stats.py  evaluate.py  examples_DSPy.py  filter.py  gen_queries_DSPy.py  generate.py  generate_DSPy.py  generate_triples.py  get_batch_size.py  inpars.py  inpars_plus.py  load_merge_push.py  prompt.py  query_eval.py  rerank.py  serve_model.py  train.py  train_generator.py  uploads_hf.py  utils.py  vllm_inference.py
notebooks/: checking_queries.ipynb  example_documents.csv  run_dspy.py  testing-GPT-J.ipynb  vllm_dspy.py
results/: BM25_flat.json  cpo_arguana_gen10k_nofilter_MonoT5_top1000.args  cpo_msmarco_arguana_gen10k_nofilter_monot5_top1000_fix.json  cpo_msmarco_nfcorpus_gen10k_nofilter_monot5_top1000_fix.json  cpo_msmarco_scifact_gen100k_nofilter_monot5_top1000_fix.json  cpo_msmarco_scifact_gen100k_nofilter_monot5_top100_fix.json  cpo_msmarco_scifact_gen100k_scores_MiniLM_top100.json  cpo_msmarco_scifact_gen100k_scores_monot5_top100.json  cpo_msmarco_scifact_gen10k_nofilter_MiniLM_top100.json  cpo_msmarco_scifact_gen10k_scores_MiniLM_top100.json  cpo_msmarco_trec-covid_gen10-k_scores_MiniLM_top100.json  cpo_msmarco_trec-covid_gen100k_nofilter_monot5_top1000_fix.json  cpo_msmarco_trec-covid_gen100k_scores_monot5_top100.json  cpo_msmarco_trec-covid_gen10k_nofilter_MiniLM_top100.json  cpo_msmarco_trec-covid_gen10k_nofilter_monot5_top100.json  cpo_msmarco_trec-covid_gen10k_scores_MiniLM_top100.json  cpo_scifact_gen10k_nofilter_MiniLM_top100.args  cpo_scifact_gen10k_nofilter_MiniLM_top100.json  cpo_scifact_gen10k_nofilter_MonoT5_top1000.args  cpo_trec-covid_gen10k_nofilter_MiniLM_top100.args  cpo_trec-covid_gen10k_nofilter_MiniLM_top100.json  (+33 more)
(+93 files in other folders)
