[project]
name = "inparsplus"
version = "2024.12.0-dev"
description = "Synthetic data generation for the modern age"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "bitsandbytes",
    "ftfy",
    "ir_datasets",
    "openai",
    "scipy",
    "scikit-learn",
    "pandas",
    "transformers",
    "wandb",
    "bm25s",
    "datasets",
]
authors = [
    { name = "Danilo Toapanta" },
    { name = "Miklos Hamar" },
    { name = "Jesse Brouwers" },
    { name = "Matey Krastev" },
    { name = "Luiz Bonifacio" },
    { name = "Hugo Abonizio" },
    { name = "Vitor Jeronymo" },
    { name = "Roberto Lotufo" },
    { name = "Jakub Zavrel" },
    { name = "Rodrigo Nogueira" },
    { name = "Marzieh Fadaee" },
]

[project.optional-dependencies]
"gpu" = ["faiss-gpu", "pyserini", "vllm"]
"dense" = ["faiss-gpu", "faiss-cpu", "pyserini"]
"train" = ["unsloth", "bitsandbytes", "peft", "trl"]
"all" = [
    "unsloth",
    "bitsandbytes",
    "peft",
    "trl",
    "faiss-gpu",
    "faiss-cpu",
    "pyserini",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "inpars"
